--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashActivity"
-    android:background="@drawable/luncher_bg"
+    android:background="@drawable/lunch_bg1"
     android:id="@+id/rl_root_splash"
      >
 
@@ -27,8 +27,9 @@
         android:layout_height="wrap_content" />
     
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_update_info"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textColor="#000000"
         android:text="升级进度: 0%"
         android:layout_width="wrap_content"
