--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:wailaixing="http://schemas.android.com/apk/res/com.wailaixing.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -15,6 +16,9 @@
         android:textSize="22sp" />
 
     <com.wailaixing.mobilesafe.ui.SettingItemView
+        wailaixing:title="设置自动更新"
+        wailaixing:desc_on="设置自动更新已经开启"
+        wailaixing:desc_off="设置自动更新已经关闭"
     	android:id="@+id/siv_update"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content" />
