--- a/res/layout/activity_lost_find.xml
+++ b/res/layout/activity_lost_find.xml
@@ -14,11 +14,114 @@
         android:gravity="center"
         android:background="#9400d3" />
     
-	<TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+	<RelativeLayout	
+    	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"  >	
+	    
+	    <TextView
+	        android:layout_marginLeft="5dip"
+	        android:layout_marginTop="8dip"
+	        android:textSize="22sp"
+	        android:textColor="#000000"
+	        android:text="安全号码"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"  />
+
+	    <TextView
+			android:layout_alignParentRight="true"
+	        android:layout_marginRight="5dip"
+	        android:layout_marginTop="8dip"
+	        android:textSize="22sp"
+	        android:textColor="#000000"
+	        android:text="xxx"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"  />	        
+
+	    
+	</RelativeLayout>
+	
+	        	    
+    <View
+        android:layout_marginTop="10dip"
+        android:background="#123456"
+        android:layout_height="0.2dip"
+        android:layout_width="fill_parent" />	
     
+    
+	<RelativeLayout	
+    	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"  >	
+	    
+	    <TextView
+	        android:layout_marginLeft="5dip"
+	        android:layout_marginTop="8dip"
+	        android:textSize="22sp"
+	        android:textColor="#000000"
+	        android:text="防盗保护是否开启"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"  />
+
+	    <ImageView
+	        android:src="@drawable/unlock"
+			android:layout_alignParentRight="true"
+	        android:layout_marginRight="5dip"
+	        android:layout_marginTop="8dip"
+	        android:layout_width="30dip"
+	        android:layout_height="30dip"  />	        
+	</RelativeLayout>
+	        	    
+    <View
+        android:layout_marginTop="10dip"
+        android:background="#123456"
+        android:layout_height="0.2dip"
+        android:layout_width="fill_parent" />	  
+        
+    <TextView
+        android:background="@drawable/shape_selector"
+        android:clickable="true"
+        android:onClick="reEnterSetup"
+        android:layout_marginLeft="5dip"
+        android:layout_marginTop="8dip"
+        android:textSize="22sp"
+        android:textColor="#000000"
+        android:text="重新进入设置向导"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"  />
+	        
+    <View
+        android:layout_marginTop="10dip"
+        android:background="#123456"
+        android:layout_height="0.2dip"
+        android:layout_width="fill_parent" />	  
+ 
+    <TextView
+        android:background="#333000"
+        android:layout_marginLeft="5dip"
+        android:layout_marginTop="8dip"
+        android:textSize="22sp"
+        android:textColor="#000000"
+        android:text="功能简介"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"  />    
+
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@android:drawable/btn_minus"
+        android:text="GPS追踪 : #*location*#" />
+
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@android:drawable/btn_minus"
+        android:text="报警音乐: #*alarm*#" />
+    
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@android:drawable/btn_minus"
+        android:text="远程数据销毁: #*wipedata*#" />
+
+    <TextView
+        style="@style/text_content_style"
+        android:drawableLeft="@android:drawable/btn_minus"
+        android:text="远程锁屏: #*lockscreen*#" />    
     
 </LinearLayout>
