--- a/res/layout/activity_setup3.xml
+++ b/res/layout/activity_setup3.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:wailaixing="http://schemas.android.com/apk/res/com.wailaixing.mobilesafe"    
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -9,35 +10,30 @@
         android:id="@+id/textView1"
         android:layout_width="fill_parent"
         android:layout_height="55dip"
-        android:text="1.欢迎使用手机防盗" 
+        android:text="3.设置安全号码" 
         android:textColor="#000000"
         android:gravity="center"
         android:background="#9400d3" />
   
-    <TextView
-        style="@style/text_content_style"
-        android:text="您的手机防盗卫士：" />
+
 
     <TextView
         style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/btn_minus"
-        android:text="sim卡变更报警" />
+        android:text="SIM卡变更后\n报警短信会发给安全号码" />
 
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/btn_minus"
-        android:text="GPS追踪" />
+    <EditText
+        android:hint="请输入电话号码"
+        android:inputType="phone"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    
+    <Button
+		android:background="@drawable/button_bg"
+		android:text="选择联系人"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" />    
 
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/btn_minus"
-        android:text="远程数据销毁" />
 
-    <TextView
-        style="@style/text_content_style"
-        android:drawableLeft="@android:drawable/btn_minus"
-        android:text="远程锁屏" />   
-        
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,22 +41,22 @@
         android:orientation="horizontal" >
     	
    	    <ImageView
+   	        android:src="@android:drawable/presence_invisible"
+    		android:layout_width="wrap_content"
+    		android:layout_height="wrap_content"   />
+   	    <ImageView
+   	        android:src="@android:drawable/presence_invisible"
+    		android:layout_width="wrap_content"
+    		android:layout_height="wrap_content"   />
+   	    <ImageView
    	        android:src="@android:drawable/presence_online"
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"   />
    	    <ImageView
    	        android:src="@android:drawable/presence_invisible"
     		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"   />
-   	    <ImageView
-   	        android:src="@android:drawable/presence_invisible"
-    		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"   />
-   	    <ImageView
-   	        android:src="@android:drawable/presence_invisible"
-    		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"   />   
-    </LinearLayout>
+    </LinearLayout>    
     
     <RelativeLayout
     	android:layout_width="match_parent"
@@ -68,14 +64,15 @@
         
         <ImageView
             android:layout_centerInParent="true"
-            android:src="@drawable/setup1"
+            android:src="@drawable/phone"
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"  />
         
         <Button
          	style="@style/button_next_style" />
 
+        <Button
+         	style="@style/button_pre_style" />
          
-        
     </RelativeLayout>
 </LinearLayout>
