--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -22,10 +22,33 @@
     <style name="text_content_style">
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_marginTop">8dip</item>
-        <item name="android:layout_marginLeft">10dip</item>
+        <item name="android:layout_marginLeft">8dip</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-    </style>      
+    </style>    
+    
+    
+    
+    <style name="button_next_style">
+        <item name="android:background">@drawable/button</item>
+        <item name="android:text">"下一步"</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:onClick">next</item>
+    </style> 
+    
+    
+    <style name="button_pre_style">
+        <item name="android:background">@drawable/button</item>
+        <item name="android:text">"上一步"</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:onClick">pre</item>
+    </style>     
 </resources>
