--- a/res/layout/activity_setup2.xml
+++ b/res/layout/activity_setup2.xml
@@ -24,10 +24,10 @@
         android:text="下次重启手机如果发现SIM变化\n就会发送报警短信" />
 
     <com.wailaixing.mobilesafe.ui.SettingItemView
+        android:id="@+id/siv_setup2_sim"
     	wailaixing:title="点击绑定SIM卡"
     	wailaixing:desc_on="SIM卡已绑定"
     	wailaixing:desc_off="SIM卡未绑定"
-		android:id="@+id/siv_update"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
 
