--- a/res/layout/activity_setup3.xml
+++ b/res/layout/activity_setup3.xml
@@ -22,6 +22,7 @@
         android:text="SIM卡变更后\n报警短信会发给安全号码" />
 
     <EditText
+        android:id="@+id/et_setup3_phone"
         android:hint="请输入电话号码"
         android:inputType="phone"
         android:layout_width="fill_parent"
