--- a/res/layout/activity_lost_find.xml
+++ b/res/layout/activity_lost_find.xml
@@ -28,6 +28,7 @@
 	        android:layout_height="wrap_content"  />
 
 	    <TextView
+	        android:id="@+id/tv_safe_number"
 			android:layout_alignParentRight="true"
 	        android:layout_marginRight="5dip"
 	        android:layout_marginTop="8dip"
@@ -63,6 +64,7 @@
 
 	    <ImageView
 	        android:src="@drawable/unlock"
+	        android:id="@+id/iv_protecting"
 			android:layout_alignParentRight="true"
 	        android:layout_marginRight="5dip"
 	        android:layout_marginTop="8dip"
